# meta_refl

./: CMakeLists.txt
include/bluegrass/: meta.hpp
include/bluegrass/meta/: function_traits.hpp  preprocessor.hpp  refl.hpp  tt  utility.hpp
modules/: FindSphinx.cmake  catch2_install.cmake.in  catch2_macro.cmake  meta_refl-config.cmake.in
tests/: CMakeLists.txt  meta_tests.cpp  traits_tests.cpp
